--- a/.github/workflows/ml-deploy.yaml
+++ b/.github/workflows/ml-deploy.yaml
@@ -1,5 +1,4 @@
 name: ml-deploy
-
 on:
  push:
    branches:
@@ -11,7 +10,7 @@ jobs:
 
    steps:
      - name: Checkout
-     - uses: actions/checkout@v2
+       uses: actions/checkout@v2
      
      - name: Configure AWS Credentials
        uses: aws-actions/configure-aws-credentials@v1
