--- a/.github/workflows/ml-deploy.yaml
+++ b/.github/workflows/ml-deploy.yaml
@@ -21,6 +21,7 @@ jobs:
 
      - name: make credentials file
        run: |
+        mkdir ~/.aws
         touch ~/.aws/credentials
         echo "[default]" > ~/.aws/credentials
         echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
