--- a/scripts/ml/Dockerfile
+++ b/scripts/ml/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3
 COPY requirements.txt   ./
 
 RUN pip install -r requirements.txt
+RUN pip install StockScope
 
 COPY __init__.py ./
 COPY entry_point.py ./
