--- a/scripts/ml/Dockerfile
+++ b/scripts/ml/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3
 COPY requirements.txt   ./
 
 RUN pip install -r requirements.txt
-RUN pip install StockScope
+RUN pip list
 
 COPY __init__.py ./
 COPY entry_point.py ./
