--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -1,13 +1,11 @@
 FROM python:3
 
 COPY ./scripts/ml/requirements.txt   ./
+COPY ./scripts ./scripts
+COPY ./setup.py ./setup.py
 
 RUN pip install -r requirements.txt
+RUN pip list
 
-COPY ./scripts/ml/__init__.py ./
-COPY ./scripts/ml/entry_point.py ./
-COPY ./scripts/ml/config ./config
-COPY ./scripts/ml/preprocess ./preprocess
-COPY ./scripts/ml/model ./model
+RUN pytest
 
-CMD ["python3", "-m", "entry_point"]
