--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -4,7 +4,8 @@ COPY ./scripts/ml/requirements.txt   ./
 COPY ./scripts ./scripts
 COPY ./setup.py ./setup.py
 
-RUN pip install .
+RUN python setup.py build
+RUN python setup.py install
 
 RUN pip install -r requirements.txt
 RUN pip list
