--- a/.github/workflows/ml-deploy.yaml
+++ b/.github/workflows/ml-deploy.yaml
@@ -35,5 +35,5 @@ jobs:
        run: |
         docker-compose up --build
         docker tag stockscope_ml-container:latest 835636182609.dkr.ecr.us-east-2.amazonaws.com/learning:latest
-        aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 835636182609.dkr.ecr.us-east-2.amazonaws.com
-        docker push 835636182609.dkr.ecr.us-east-2.amazonaws.com/learning:latest
+        #aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 835636182609.dkr.ecr.us-east-2.amazonaws.com
+        #docker push 835636182609.dkr.ecr.us-east-2.amazonaws.com/learning:latest
